# showme

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  README.md  demo.sh
.github/workflows/: build.yml  ci.yml  release.yml
docs/: README.md  examples.md
docs/cli/: README.md
examples/: basic_viewer.rs  custom_backend.rs  image_processing.rs  programmatic_config.rs
src/: autocrop.rs  capabilities.rs  cli.rs  color_quantize.rs  config.rs  error.rs  image.rs  lib.rs  main.rs  renderer.rs  tmux.rs  video.rs
src/backend/: chunk_util.rs  image_util.rs  iterm2.rs  kitty.rs  mod.rs  sixel.rs  unicode.rs
src/data/: html-colors.inc
tests/: capabilities_tests.rs  cli.rs  config_tests.rs  image_tests.rs  integration_tests.rs  rendering_tests.rs
tests/fixtures/: images.txt
