[package]
name = "showme"
version = "0.1.0"
edition = "2024"
authors = ["sandwich <bread@sandwich.farm>"]
description = "A powerful terminal image and video viewer supporting multiple formats and rendering backends"
repository = "https://github.com/sandwichfarm/showme"
homepage = "https://github.com/sandwichfarm/showme"
documentation = "https://docs.rs/showme"
readme = "README.md"
license = "GPL-2.0"
keywords = ["terminal", "image", "video", "viewer", "media"]
categories = ["command-line-utilities", "multimedia::images", "multimedia::video"]

[[bin]]
name = "showme"
path = "src/main.rs"

[[bin]]
name = "ascii-title"
path = "src/bin/ascii_title.rs"

[features]
default = ["unicode", "kitty", "iterm2", "video", "qoi", "pdf", "svg"]
unicode = []
kitty = []
sixel = ["dep:sixel-sys"]
iterm2 = []
video = ["dep:ffmpeg-next"]
qoi = ["dep:qoi"]
pdf = ["dep:pdfium-render"]
svg = ["dep:resvg"]

[dependencies]
anyhow = "1.0"
atty = "0.2"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
figlet-rs = "0.1"
kamadak-exif = "0.5"
image = { version = "0.25", default-features = false, features = [
    "bmp",
    "dds",
    "exr",
    "gif",
    "hdr",
    "ico",
    "jpeg",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
] }
once_cell = "1.19"
rayon = "1.8"
thiserror = "1.0"

[dependencies.sixel-sys]
version = "0.3"
optional = true

[dependencies.ffmpeg-next]
version = "8.0"
optional = true
path = "third_party/ffmpeg-next-src/ffmpeg-next-8.0.0"

[dependencies.qoi]
version = "0.4"
optional = true

[dependencies.pdfium-render]
version = "0.8"
optional = true

[dependencies.resvg]
version = "0.44"
optional = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
